--- a/stylesheets/views/_sections.scss
+++ b/stylesheets/views/_sections.scss
@@ -329,7 +329,8 @@
 	.signup-follow {
 		text-align: center;
 		font-size: .9em;
-		padding: 0 10%;
+		max-width: 20em;
+		margin: 0 auto;
 
 		a {
 			font-weight: bold;
@@ -357,7 +358,8 @@
 	background-image: image-url("sections/signup.jpg");	
 
 	.text-box {
-		width: 30%;
+		width: 35%;
+		max-width: 30em;
 		color: #fff;
 		right: 10%;
 		top: 6em;
